IngressControllers/jenkins_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "jenkins.localhost"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
